#47 list configuration values in time for given key - GET all values for given key - swagger - new tests in configuration-test.http - with no response verification
